--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gary Malkasian MAT Portfolio</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-    
+    <section class="school">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Resume</li>
+                <li>Teaching Philosophy</li>
+                <li>Education Biography</li>
+                <li>InTASC Standards</li>
+            </ul>
+        </nav>
+
+        <h1>Gary S. Malkasian Education Portfolio</h1>
+
+        <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
+                class="left" src="img/CWU_Medallion-RGB-transparent.png"></a>
+
+        <p class="box">Central Washington University
+            <br>Masters of Teaching Program
+            <br>Summer 2024 Cohort
+        </p>
+
+        <img class="right" src="img/Gary.jpg">
+
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+    </section>
 </body>
+
 </html>
