changed layout to grid

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
 
         <h1>Gary S. Malkasian Education Portfolio</h1>
 
-        <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
-                class="left" src="img/CWU_Medallion-RGB-transparent.png"></a>
+        <main>
+            <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
+                    class="left" src="img/CWU_Medallion-RGB-transparent.png"></a>
 
-        <p class="box">Central Washington University
-            <br>Masters of Teaching Program
-            <br>Summer 2024 Cohort
-        </p>
+            <p class="box">Central Washington University
+                <br>Masters of Teaching Program
+                <br>Summer 2024 Cohort
+            </p>
 
-        <img class="right" src="img/Gary.jpg">
+            <img class="right" src="img/Gary.jpg">
+        </main>
 
         <p></p>
         <p></p>
@@ -41,11 +43,7 @@
         <p></p>
         <p></p>
         <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+
     </section>
 </body>
 
