--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <section class="school">
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Resume</li>
-                <li>Teaching Philosophy</li>
-                <li>Education Biography</li>
-                <li>InTASC Standards</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="pages/resume.html">Resume</a></li>
+                <li><a href="pages/philosophy.html">Teaching Philosophy</a></li>
+                <li><a href="pages/biography.html">Education Biography</a></li>
+                <li><a href="#">InTASC Standards</a></li>
             </ul>
         </nav>
 
@@ -26,22 +26,14 @@
             <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
                     class="left" src="img/CWU_Medallion-RGB-transparent.png"></a>
 
-            <p class="box">Central Washington University
+            <div class="box center" >
+                Central Washington University
                 <br>Masters of Teaching Program
                 <br>Summer 2024 Cohort
-            </p>
+            </div>
 
             <img class="right" src="img/Gary.jpg">
         </main>
-
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-
     </section>
 </body>
 
