added leaf theme

--- a/pages/biography.html
+++ b/pages/biography.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="pine">
+    <section class="leaf">
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
