added intasc submenu

--- a/index.html
+++ b/index.html
@@ -11,13 +11,27 @@
 <body>
     <section class="school">
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="pages/resume.html">Resume</a></li>
-                <li><a href="pages/philosophy.html">Teaching Philosophy</a></li>
-                <li><a href="pages/biography.html">Education Biography</a></li>
-                <li><a href="#">InTASC Standards</a></li>
-            </ul>
+            <div>
+                <a href="#">Home</a>
+                <a href="pages/resume.html">Resume</a>
+                <a href="pages/philosophy.html">Teaching Philosophy</a>
+                <a href="pages/biography.html">Education Biography</a>
+
+                <div class="subnav">
+                    <a class="subnavbtn" href="#">InTASC Standards</a>
+                    <div class="subnav-content">
+                        <a href="intasc/instasc1.html">Standard #1</a>
+                        <a href="intasc/instasc2.html">Standard #2</a>
+                        <a href="intasc/instasc3.html">Standard #3</a>
+                        <a href="intasc/instasc4.html">Standard #4</a>
+                        <a href="intasc/instasc5.html">Standard #5</a>
+                        <a href="intasc/instasc6.html">Standard #6</a>
+                        <a href="intasc/instasc7.html">Standard #7</a>
+                        <a href="intasc/instasc8.html">Standard #8</a>
+                        <a href="intasc/instasc9.html">Standard #9</a>
+                        <a href="intasc/instasc10.html">Standard #10</a>
+                    </div>
+                </div>
         </nav>
 
         <h1>Gary S. Malkasian Education Portfolio</h1>
@@ -26,7 +40,7 @@
             <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
                     class="left" src="img/CWU_Medallion-RGB-transparent.png"></a>
 
-            <div class="box center" >
+            <div class="box center">
                 Central Washington University
                 <br>Masters of Teaching Program
                 <br>Summer 2024 Cohort
@@ -34,6 +48,14 @@
 
             <img class="right" src="img/Gary.jpg">
         </main>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
     </section>
 </body>
 
