--- a/pages/biography.html
+++ b/pages/biography.html
@@ -11,13 +11,27 @@
 <body>
     <section class="leaf">
         <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="philosophy.html">Teaching Philosophy</a></li>
-                <li><a href="#">Education Biography</a></li>
-                <li><a href="#">InTASC Standards</a></li>
-            </ul>
+            <div>
+                <a href="../index.html">Home</a>
+                <a href="resume.html">Resume</a>
+                <a href="philosophy.html">Teaching Philosophy</a>
+                <a href="#">Education Biography</a>
+
+                <div class="subnav">
+                    <a class="subnavbtn" href="#">InTASC Standards</a>
+                    <div class="subnav-content">
+                        <a href="../intasc/instasc1.html">Standard #1</a>
+                        <a href="../intasc/instasc2.html">Standard #2</a>
+                        <a href="../intasc/instasc3.html">Standard #3</a>
+                        <a href="../intasc/instasc4.html">Standard #4</a>
+                        <a href="../intasc/instasc5.html">Standard #5</a>
+                        <a href="../intasc/instasc6.html">Standard #6</a>
+                        <a href="../intasc/instasc7.html">Standard #7</a>
+                        <a href="../intasc/instasc8.html">Standard #8</a>
+                        <a href="../intasc/instasc9.html">Standard #9</a>
+                        <a href="../intasc/instasc10.html">Standard #10</a>
+                    </div>
+                </div>
         </nav>
 
         <h1>Education Biography</h1>
