submenu issues fixed, added js to hold subnav open, added favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gary Malkasian MAT Portfolio</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="img/education_icon.ico" rel="icon" type="image/x-icon">
+    <script src="script/script.js"></script>
 </head>
 
 <body>
@@ -16,10 +18,9 @@
                 <a href="pages/resume.html">Resume</a>
                 <a href="pages/philosophy.html">Teaching Philosophy</a>
                 <a href="pages/biography.html">Education Biography</a>
-
                 <div class="subnav">
-                    <a class="subnavbtn" href="#">InTASC Standards</a>
-                    <div class="subnav-content">
+                    <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
+                    <div id="subnav-content" class="subnav-content">
                         <a href="intasc/instasc1.html">Standard #1</a>
                         <a href="intasc/instasc2.html">Standard #2</a>
                         <a href="intasc/instasc3.html">Standard #3</a>
