--- a/pages/biography.html
+++ b/pages/biography.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
+    <script src="../script/script.js"></script>
     <title>Education Biography</title>
 </head>
 
@@ -16,10 +18,9 @@
                 <a href="resume.html">Resume</a>
                 <a href="philosophy.html">Teaching Philosophy</a>
                 <a href="#">Education Biography</a>
-
                 <div class="subnav">
-                    <a class="subnavbtn" href="#">InTASC Standards</a>
-                    <div class="subnav-content">
+                    <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
+                    <div id="subnav-content" class="subnav-content">
                         <a href="../intasc/instasc1.html">Standard #1</a>
                         <a href="../intasc/instasc2.html">Standard #2</a>
                         <a href="../intasc/instasc3.html">Standard #3</a>
