--- a/pages/philosophy.html
+++ b/pages/philosophy.html
@@ -39,7 +39,7 @@
 
         <div class="box">
 
-            <blockquote>“You can watch somebody ski all day. You’re not going to learn how to ski that way.”</blockquote>
+            <blockquote class="quote center">“You can watch somebody ski all day. You’re not going to learn how to ski that way.”</blockquote>
             <blockquote class="attrib">– UW Chemistry Professor Alden "Loo" Crittenden (1920-2009)</blockquote>
                         
             <p>When we say we learn, we may refer to committing a body of knowledge to memory, or to acquiring or
