--- a/intasc/instasc1.html
+++ b/intasc/instasc1.html
@@ -40,7 +40,7 @@
 
         <div class="box intasc">
 
-            <blockquote>The teacher understands how learners grow and develop, recognizing that patterns of learning and 
+            <blockquote class="italics">The teacher understands how learners grow and develop, recognizing that patterns of learning and 
                 development vary individually within and across the cognitive, linguistic, social, emotional, and physical areas,
                 and designs and implements developmentally appropriate and challenging learning experiences.</blockquote>
             
