changed intasc pages to have subnav open by default, fixed spacing issues after h1 elements

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
         </nav>
 
-        <h1>Gary S. Malkasian Education Portfolio</h1>
+        <h1 class="home">Gary S. Malkasian Education Portfolio</h1>
 
         <main>
             <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
