added skeletons for all instasc standard pages

--- a/intasc/instasc4.html
+++ b/intasc/instasc4.html
@@ -21,10 +21,10 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="#">1. Learner Development</a>
+                        <a href="instasc1.html">1. Learner Development</a>
                         <a href="instasc2.html">2. Learning Differences</a>
                         <a href="instasc3.html">3. Learning Environments</a>
-                        <a href="instasc4.html">4. Content Knowledge</a>
+                        <a href="#">4. Content Knowledge</a>
                         <a href="instasc5.html">5. Content Application</a>
                         <a href="instasc6.html">6. Assessment</a>
                         <a href="instasc7.html">7. Instructional Planning</a>
@@ -35,19 +35,14 @@
                 </div>
         </nav>
 
-        <h1>InTASC Standard #1<br>Learner Development</h1>
+        <h1>InTASC Standard #4<br>Content Knowledge</h1>
 
         <div class="box intasc">
-            <blockquote class="italics">The teacher understands how learners grow and develop, recognizing that patterns
-                of learning and development vary individually within and across the cognitive, linguistic, social,
-                emotional, and physical areas, and designs and implements developmentally appropriate and challenging
-                learning experiences.
-            </blockquote>
+            <blockquote class="italics">The teacher understands the central concepts, tools of inquiry, and structures
+                of the discipline(s) he or she teaches and creates learning experiences that make the discipline
+                accessible and meaningful for learners to assure mastery of the content.</blockquote>
 
-            <p>High School students come to computer programming classes with different levels of programming,
-                motivations, and learning rates. Along with theory, demonstrations, and coding assignments I provide
-                mentoring, feedback, and significant scaffolding as needed. Some need little more than the coding
-                opportunity while others struggle and need a lot of personal attention.</p>
+            <p>text needed Content Knowledge.</p>
         </div>
     </section>
 </body>
