--- a/intasc/instasc2.html
+++ b/intasc/instasc2.html
@@ -21,8 +21,8 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="#">1. Learner Development</a>
-                        <a href="instasc2.html">2. Learning Differences</a>
+                        <a href="instasc1.html">1. Learner Development</a>
+                        <a href="#">2. Learning Differences</a>
                         <a href="instasc3.html">3. Learning Environments</a>
                         <a href="instasc4.html">4. Content Knowledge</a>
                         <a href="instasc5.html">5. Content Application</a>
@@ -35,21 +35,14 @@
                 </div>
         </nav>
 
-        <h1>InTASC Standard #1<br>Learner Development</h1>
+        <h1>InTASC Standard #2<br>Learning Differences</h1>
 
         <div class="box intasc">
-            <blockquote class="italics">The teacher understands how learners grow and develop, recognizing that patterns
-                of learning and development vary individually within and across the cognitive, linguistic, social,
-                emotional, and physical areas, and designs and implements developmentally appropriate and challenging
-                learning experiences.
-            </blockquote>
-
-            <p>High School students come to computer programming classes with different levels of programming,
-                motivations, and learning rates. Along with theory, demonstrations, and coding assignments I provide
-                mentoring, feedback, and significant scaffolding as needed. Some need little more than the coding
-                opportunity while others struggle and need a lot of personal attention.</p>
+            <blockquote class="italics">The teacher uses understanding of individual differences and diverse cultures and communities to ensure
+                inclusive learning environments that enable each learner to meet high standards.</blockquote>
+            
+            <p>text needed Learning Differences</p>
         </div>
     </section>
 </body>
-
 </html>
