--- a/intasc/instasc9.html
+++ b/intasc/instasc9.html
@@ -21,7 +21,7 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="#">1. Learner Development</a>
+                        <a href="instasc1.html">1. Learner Development</a>
                         <a href="instasc2.html">2. Learning Differences</a>
                         <a href="instasc3.html">3. Learning Environments</a>
                         <a href="instasc4.html">4. Content Knowledge</a>
@@ -29,25 +29,21 @@
                         <a href="instasc6.html">6. Assessment</a>
                         <a href="instasc7.html">7. Instructional Planning</a>
                         <a href="instasc8.html">8. Instructional Strategies</a>
-                        <a href="instasc9.html">9. Prof. Learning & Ethical Practice</a>
+                        <a href="#">9. Prof. Learning & Ethical Practice</a>
                         <a href="instasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
         </nav>
 
-        <h1>InTASC Standard #1<br>Learner Development</h1>
+        <h1>InTASC Standard #9<br>Professional Learning and Ethical Practice</h1>
 
         <div class="box intasc">
-            <blockquote class="italics">The teacher understands how learners grow and develop, recognizing that patterns
-                of learning and development vary individually within and across the cognitive, linguistic, social,
-                emotional, and physical areas, and designs and implements developmentally appropriate and challenging
-                learning experiences.
-            </blockquote>
+            <blockquote class="italics">The candidate engages in ongoing professional learning and uses evidence to
+                continually evaluate his/her practice, particularly the effects of his/her choices and actions on others
+                (learners, families, other professionals, and the community), and adapts practice to meet the needs of
+                each learner.</blockquote>
 
-            <p>High School students come to computer programming classes with different levels of programming,
-                motivations, and learning rates. Along with theory, demonstrations, and coding assignments I provide
-                mentoring, feedback, and significant scaffolding as needed. Some need little more than the coding
-                opportunity while others struggle and need a lot of personal attention.</p>
+            <p>text needed Prof. Learning & Ethical Practice.</p>
         </div>
     </section>
 </body>
