added new backgrounds

--- a/intasc/instasc1.html
+++ b/intasc/instasc1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="school intasc">
+    <section class="school inglemoor intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
