--- a/intasc/instasc7.html
+++ b/intasc/instasc7.html
@@ -7,11 +7,11 @@
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
     <script src="../script/script.js"></script>
-    <title>InTASC Standard #1</title>
+    <title>InTASC Standard #7</title>
 </head>
 
 <body>
-    <section class="school intasc">
+    <section class="school lwtech intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
