--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="school">
+    <section class="school inglemoor">
         <nav>
             <div>
                 <a href="#">Home</a>
