--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -21,16 +21,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="instasc1.html">1. Learner Development</a>
-                        <a href="instasc2.html">2. Learning Differences</a>
-                        <a href="instasc3.html">3. Learning Environments</a>
-                        <a href="instasc4.html">4. Content Knowledge</a>
+                        <a href="intasc1.html">1. Learner Development</a>
+                        <a href="intasc2.html">2. Learning Differences</a>
+                        <a href="intasc3.html">3. Learning Environments</a>
+                        <a href="intasc4.html">4. Content Knowledge</a>
                         <a href="#">5. Content Application</a>
-                        <a href="instasc6.html">6. Assessment</a>
-                        <a href="instasc7.html">7. Instructional Planning</a>
-                        <a href="instasc8.html">8. Instructional Strategies</a>
-                        <a href="instasc9.html">9. Prof. Learning & Ethical Practice</a>
-                        <a href="instasc10.html">10. Leadership & Collaboration</a>
+                        <a href="intasc6.html">6. Assessment</a>
+                        <a href="intasc7.html">7. Instructional Planning</a>
+                        <a href="intasc8.html">8. Instructional Strategies</a>
+                        <a href="intasc9.html">9. Prof. Learning & Ethical Practice</a>
+                        <a href="intasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
         </nav>
