--- a/pages/resume.html
+++ b/pages/resume.html
@@ -21,16 +21,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="../intasc/instasc1.html">Standard #1</a>
-                        <a href="../intasc/instasc2.html">Standard #2</a>
-                        <a href="../intasc/instasc3.html">Standard #3</a>
-                        <a href="../intasc/instasc4.html">Standard #4</a>
-                        <a href="../intasc/instasc5.html">Standard #5</a>
-                        <a href="../intasc/instasc6.html">Standard #6</a>
-                        <a href="../intasc/instasc7.html">Standard #7</a>
-                        <a href="../intasc/instasc8.html">Standard #8</a>
-                        <a href="../intasc/instasc9.html">Standard #9</a>
-                        <a href="../intasc/instasc10.html">Standard #10</a>
+						<a href="../intasc/intasc1.html">1. Learner Development</a>
+                        <a href="../intasc/intasc2.html">2. Learning Differences</a>
+                        <a href="../intasc/intasc3.html">3. Learning Environments</a>
+                        <a href="../intasc/intasc4.html">4. Content Knowledge</a>
+                        <a href="../intasc/intasc5.html">5. Content Application</a>
+                        <a href="../intasc/intasc6.html">6. Assessment</a>
+                        <a href="../intasc/intasc7.html">7. Instructional Planning</a>
+                        <a href="../intasc/intasc8.html">8. Instructional Strategies</a>
+                        <a href="../intasc/intasc9.html">9. Prof. Learning & Ethical Practice</a>
+                        <a href="../intasc/intasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
         </nav>
