--- a/intasc/intasc7.html
+++ b/intasc/intasc7.html
@@ -27,7 +27,7 @@
                         <a href="intasc4.html">4. Content Knowledge</a>
                         <a href="intasc5.html">5. Content Application</a>
                         <a href="intasc6.html">6. Assessment</a>
-                        <a href="intasc7.html">7. Instructional Planning</a>
+                        <a href="#">7. Instructional Planning</a>
                         <a href="intasc8.html">8. Instructional Strategies</a>
                         <a href="intasc9.html">9. Prof. Learning & Ethical Practice</a>
                         <a href="intasc10.html">10. Leadership & Collaboration</a>
