added content and layout for intasc1, broke script into separate parts for background and subnav

--- a/intasc/intasc1.html
+++ b/intasc/intasc1.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
-    <script src="../script/script.js"></script>
+    <script src="../script/subnav.js"></script>
     <title>InTASC Standard #1</title>
 </head>
 
 <body>
-    <section class="school inglemoor intasc">
+    <section class="school leaf intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -33,6 +33,7 @@
                         <a href="intasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
         <h1>InTASC Standard #1<br>Learner Development</h1>
@@ -46,9 +47,64 @@
 
             <p>High School students come to computer programming classes with different levels of programming,
                 motivations, and learning rates. Along with theory, demonstrations, and coding assignments I provide
-                mentoring, feedback, and significant scaffolding as needed. Some need little more than the coding
+                mentoring, feedback, and significant scaffolding as needed. Some only need coding
                 opportunity while others struggle and need a lot of personal attention.</p>
         </div>
+
+        <section class="intasc grid">
+            <div class="box intasc">
+                <h2>Scaffolding Computer Science</h2>
+                <p>Computer Science – Programming in C# was an introductory computer programming class for many
+                    students. The students had varying levels of background. Half the class was designated Highly
+                    Capable; many of those had previous coding experience and many were driven to learn. Many had
+                    no coding experience and needed extra help. Two had cognitive difficulties and needed scaffolding.
+                </p>
+                <p>To begin a unit, I did a code-along demonstration of a particular concept or set of concepts.
+                    Students could observe the code displayed on screen as I wrote it and were invited to “code along”.
+                    I went slowly, talking about the concept as I did, and allowing the class to direct me as to whether
+                    they needed time to catch up. After completion, the demo code I wrote would be made available to the
+                    students, as well as the code they were expected to have written with me. They were then given an
+                    assignment that was similar to the demo but different enough to require them to apply the concepts
+                    to a new context.</p>
+                <p>While the students worked on their assignment, I made the rounds, paying special attention to the
+                    students who normally needed help, but also checking in with the others and being open to questions.
+                </p>
+                <p>Students were also encouraged to help each other, and several students had “go-to” people they went
+                    to for help.</p>
+                <p>For the students who had cognitive difficulties, I would pull up a chair and talk them through the
+                    assignment. Usually the demo code was close enough for them to copy/paste or to follow the pattern
+                    for the new context. I would sometimes spend 20-25% of the assignment time with them, but it was
+                    also surprising to me how much they could accomplish on their own.</p>
+                <p>In retrospect, I wish I had put more comments in my code while I was writing it to serve as
+                    directions for students. That would have encouraged them to enter such comments in their code as
+                    they coded along, which would help them completing their assignment. It is also a good habit to
+                    develop in general.</p>
+            </div>
+            <img src="../img/scaffolding.jpg">
+            <div>
+                <div class="box intasc">
+                    <h2>Adding Challenge</h2>
+                    <p>A significant number of students in my programming classes were highly capable and highly
+                        motivated. The goal was to keep their interest and provide challenging learning opportunities
+                        while not overwhelming those who need more help.</p>
+                    <p>My solution was to begin each lesson simply with what the students already knew, adding more to
+                        it until we reached the learning objectives. I taught theory first but then moved right into
+                        demonstrating how to write the code. The students who needed minimal instruction could jump
+                        right into doing the assignment without waiting for me to finish the lesson. While I was doing
+                        this, I threw out teasers by mentioning a coding technique that would solve a more complex
+                        problem that I could show them “later”, just to pique interest. Then as I did my rounds I would
+                        stop at the desks of hi-cap students and say, “hey, want to see something?” and show them the
+                        more advanced technique.</p>
+                    <p>But these extra lessons were not only offered to the students designated hi-cap. Often, while
+                        working 1:1 with a struggling student, if things were connecting for them then along with my 1:1
+                        recitation of the theory I’d elaborate a bit more and show them the technique, too. This made
+                        them feel special, recipients of the secret knowledge. Other students weren’t ready for it or
+                        not interested, and that was fine because it wasn’t required for the assignment.</p>
+                    <p>Another strategy was to add a “Challenge” problem to an assignment. It wasn’t required, but it
+                        could earn extra points.</p>
+                </div>
+            </div>
+        </section>
     </section>
 </body>
 
