--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
-    <script src="../script/script.js"></script>
+    <script src="../script/subnav.js"></script>
+    <script src="../script/background.js"></script>
     <title>InTASC Standard #2</title>
 </head>
 
@@ -33,16 +34,21 @@
                         <a href="intasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
         <h1>InTASC Standard #2<br>Learning Differences</h1>
 
         <div class="box intasc">
-            <blockquote class="italics">The teacher uses understanding of individual differences and diverse cultures and communities to ensure
+            <blockquote class="italics">The teacher uses understanding of individual differences and diverse cultures
+                and communities to ensure
                 inclusive learning environments that enable each learner to meet high standards.</blockquote>
-            
-            <p>text needed Learning Differences</p>
+
+            <p>Students have different ways of learning and different learning goals. By giving students a choice of
+                assignments to meet the learning object and choice in how they complete it, the learning objective is
+                contextualized to meet their needs and interests.</p>
         </div>
     </section>
 </body>
+
 </html>
