--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Gary Malkasian MAT Portfolio</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="img/education_icon.ico" rel="icon" type="image/x-icon">
-    <script src="script/script.js"></script>
+    <script src="script/subnav.js"></script>
+    <script src="script/background.js"></script>
 </head>
 
 <body>
@@ -33,6 +34,7 @@
                         <a href="intasc/intasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
         <h1 class="home">Gary S. Malkasian Education Portfolio</h1>
