--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
-    <script src="../script/script.js"></script>
+    <script src="../script/subnav.js"></script>
+    <script src="../script/background.js"></script>
     <title>InTASC Standard #5</title>
 </head>
 
@@ -33,6 +34,7 @@
                         <a href="intasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
         <h1>InTASC Standard #5<br>Content Application</h1>
