--- a/pages/biography.html
+++ b/pages/biography.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
-    <script src="../script/script.js"></script>
+    <script src="../script/subnav.js"></script>
     <title>Education Biography</title>
 </head>
 
@@ -33,6 +33,7 @@
                         <a href="../intasc/intasc10.html">10. Leadership & Collaboration</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
         <h1>Education Biography</h1>
